init empty project

--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "leadhit",
   "version": "1.0.0",
   "private": true,
-  "description": "",
-  "author": "",
+  "description": "test task for leadhit",
+  "author": "misbiheyv",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "main": "index.js",
   "dependencies": {
