all styles and logics is done

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@amcharts/amcharts5": "^5.2.9",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
